ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/Lead_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Configuration to handle Module wise application assignment</description>
    <label>Lead Assignment</label>
    <pluralLabel>Lead Assignments</pluralLabel>
</CustomObject>