ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Desktop_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Field_Set__c</fullName>
    <description>This field is used to store the field name that will be displayed on the Desktop devices.</description>
    <inlineHelpText>Please store values in this format:
ObjectName~Field1;Field2....</inlineHelpText>
    <label>Desktop Field Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>