ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Desktop_Mandatory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Mandatory_Fields__c</fullName>
    <description>This field will store the field names that are required for desktop devices.</description>
    <inlineHelpText>Please store values in this format: Field1;Field2;Field3;Field4....</inlineHelpText>
    <label>Desktop Mandatory Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>