ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Exceptional_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Criteria__c</fullName>
    <label>Exceptional Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>