ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>List of fields to be displayed on each Module</description>
    <inlineHelpText>List of fields to be displayed on each Module</inlineHelpText>
    <label>FieldName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>