ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Mobile_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Field_Set__c</fullName>
    <description>This field is used to store the fields name that should be visible for mobile devices.</description>
    <inlineHelpText>Please store values in this format:
ObjectName~Field1;Field2....</inlineHelpText>
    <label>Mobile Field Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>