ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Mobile_Mandatory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Mandatory_Fields__c</fullName>
    <description>This field stores the field names that are required for mobile devices.</description>
    <inlineHelpText>Please store values in this format: Field1;Field2;Field3;Field4....</inlineHelpText>
    <label>Mobile Mandatory Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>