ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <description>Name of the module of loan application</description>
    <inlineHelpText>Name of the module of loan application</inlineHelpText>
    <label>Module Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>