ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Module_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Module_Sequence__c</fullName>
    <description>This field will store the sequence of the modules in which they will appear on the screen.</description>
    <label>Module Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>