ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/fields/Sub_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Module_Name__c</fullName>
    <label>Sub Module Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>