ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Assignment__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>Module_Name__c</columns>
    <columns>Module_Sequence__c</columns>
    <columns>Sub_Module_Name__c</columns>
    <columns>Mobile_Field_Set__c</columns>
    <columns>Desktop_Field_Set__c</columns>
    <columns>Mobile_Mandatory_Fields__c</columns>
    <columns>Desktop_Mandatory_Fields__c</columns>
    <columns>Exceptional_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>